--- a/.vimrc.custom.config
+++ b/.vimrc.custom.config
@@ -38,3 +38,25 @@
 " let g:DoxygenToolkit_commentType="Qt"
 
 
+if has("cscope")
+    set csprg=/usr/bin/cscope              "指定用来执行 cscope 的命令
+    set csto=1                             "先搜索tags标签文件，再搜索cscope数据库
+    set cst                                "使用|:cstag|(:cs find g)，而不是缺省的:tag
+    "set cscopequickfix=s-,c-,d-,i-,t-,e-   使用QuickFix窗口来显示cscope查找结果"
+    set nocsverb                           "不显示添加数据库是否成功
+    " add any database in current directory
+    if filereadable("cscope.out")
+        cs add cscope.out                   "添加cscope数据库
+    endif
+    set csverb                             "显示添加成功与否
+endif
+nmap css :cs find s <C-R>=expand("<cword>")<CR><CR>    
+nmap csg :cs find g <C-R>=expand("<cword>")<CR><CR>    
+nmap csc :cs find c <C-R>=expand("<cword>")<CR><CR>    
+nmap cst :cs find t <C-R>=expand("<cword>")<CR><CR>    
+nmap cse :cs find e <C-R>=expand("<cword>")<CR><CR>    
+nmap csf :cs find f <C-R>=expand("<cfile>")<CR><CR>    
+nmap csi :cs find i ^<C-R>=expand("<cfile>")<CR>$<CR>
+nmap csd :cs find d <C-R>=expand("<cword>")<CR><CR>   
+
+set ff=unix
